css/expdb.css
/* ... */
.optgroup{
height: 55px;
}


#sl1, #sl2, #sl3, #sl4{
width: 80pt;
}

.sectionheader{
  font-family: 'Roboto', sans-serif;
  font-weight: 200;
  font-size: 24px;
  color: #666;
  float: left;
  min-height: 40px;
  z-index: 1000;
}

.searchframe .searchstats{
  margin-top: -30px;
  visibility: hidden;
}

.searchframe .pagination{
  display: none;
}

.searchframe{
  margin-bottom: 70px;
}

#menusearchframe{
  margin-right:-20px;
}

.teaser{
  color: #666;
}

/* First level of nav */
.sidenav {
  padding-bottom: 5px;
  border-radius: 5px;
  text-decoration: none;
  list-style: none;
}

.sidenav ul {
  list-style: none;
  margin-left: 10px;
}

/* All levels of nav */

select{
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    padding: 0px;
}

.sidenav > li > .form-control-wrapper {
  margin-top:15px;
  margin-left:10px;
  margin-right:10px;
  margin-bottom:30px;
}

.sidenav > li > input {
  display: block;
  margin-left: 15px;
  margin-right: 15px;
  width: 170px;
}

.sidenav > li > select {
  margin-top:15px;
  margin-left:10px;
  margin-right:10px;
  margin-bottom:30px;
  width: 205px;
}

.sidenav > li > a {
  display: block;
  color: #424242;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 0px;
  text-decoration: none;
}

.sidenav > li.tags {
  padding-left: 10px;
  padding-right: 10px;
}

.hint{
  z-index: 1000;
  background-color: #f6f6f6;
}

::-webkit-input-placeholder {  color: red; }
.sidenav input ::-moz-placeholder {  color: red; }
.sidenav input :-ms-input-placeholder {  color: red; }

.filterlabel {
  padding-bottom: 0px !important;
  margin-bottom: 2px;
}

.filterremove {
  padding-top: 0px !important;
}

.sidenav > li > button{
  margin-top: 10px;
  margin-left: 5px;
  margin-right: 10px;
  margin-bottom: 10px;
  width: 90%;
}

.sidenav > .topactive {
  font-weight: bold;
  background-color: rgba(0,0,0,0.05);
  margin-left: -15px;
}
.sidenav > .topactive > a{
  margin-left: 15px;
}
.sidenav > .active {
  font-weight: bold;
}

.update_date{
  color: #acacac;
  font-size: 12px;
  float:right;
}

.update_comment{
  color: #666;
  font-style: italic;
}

.teaser > em{
  color: #666;
  font-weight: 800;
  font-family: "Helvetica-Neue", sans-serif;
}

.dataproperty{
  color: #222;
  font-weight: 800;
  width: 60px;
  float:left;
  display:inline-block;
}

.datadescription{
  overflow:hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color:#999;
}


.whitepage{
  background: #fff;
  margin-top:10px;
  margin-bottom:10px;
  padding:10px;
  box-shadow: 0 0 4px rgba(0,0,0,.14),0px 4px 8px rgba(0,0,0,.14);
}


.navbar-static-top{
  background: #f6f6f6;
  box-shadow: 0 0 4px rgba(0,0,0,.14),0px 4px 8px rgba(0,0,0,.14);
}

.rightpanel{
  margin-left:265px;
  width: -moz-calc(100% - 265px);
  width: -webkit-calc(100% - 265px);
  width: calc(100% - 265px);
}

.rightpanel{
  margin-left:265px;
  width: -moz-calc(100% - 265px);
  width: -webkit-calc(100% - 265px);
  width: calc(100% - 265px);
}

.searchbar{
  background: #f6f6f6;
  padding-bottom: 30px;
  padding-left: 0px;
  padding-right: 0px;
  margin-left: -5px;
  position: absolute;
  min-height: 100%;
  box-shadow: 4px 0px 8px 0px rgba(0,0,0,.20);
  font-size: 13px !important;
  overflow-y: auto;
  overflow-x: visible;
  height: 100%;
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: none;
  width:265px !important;
  z-index: 1020;
}

.searchbar::-webkit-scrollbar {
 display: none;
}

.searchbar i{
  margin-right: 5px;
}

.searchbar a:hover {
  text-decoration: none;
  background-color: transparent !important;
}

#submenucontainer{
  min-height: 100%;
}

.guidechapter-contact li i{
  color: #757575;
  margin-right: 5px;
}

.menuheader{
  color: #5a647d;
  font-family: proxima-nova,sans-serif;
  font-weight: bold;
  font-size: 13px;
  margin: 20px 0 15px;
  text-transform: uppercase;
  position: relative;
}

.menuheader a{
  color: #5a647d;
  text-decoration: none;
}

#filters .control-label{
  color: #888;
}

#mainmenu{
  display:none;
  max-width: 20%;
}

.menu{
  list-style:none;
  overflow:hidden;
  padding-left:0px;
}

.menu a:hover{
  text-decoration:none
}

.menu li{

}

.menu li:last-child{
  border-bottom:none
}

.menu li:first-child{
  border-top:none
}

.menu li.filter{
  padding:3px;
}

.menu a{
  display:block;
  padding:7px 10px 7px 7px;
  text-shadow:0 1px 0 #fff;
  color: #888;
}

.menu a.selected{
  background:#dedede;
  font-weight:bold;
  color:#d26911;
  cursor:default
}

.menu a.selected i{
  color:#d26911;
}

.navbar-form .form-control{
  width: 100% !important;
}
.navbar-form{
  padding-top: 12px !important;
}

.topchapter a .counter{
  float:right;
  margin-left:5px
}

.coverspacer{
   height: 30px;
}

.blueheader{
  color: #333;
}

.greenheader{
  color: #757575;
}

.yellowheader{
  color: #333;
  margin-bottom: 20px;
}

.redheader{
  color: #333;
  margin-bottom: 20px;
}

.upload{
  margin-top: 10px;
  margin-bottom: 10px;
  width: 100%
}

.filtertitle{
  display:block;
  padding-top: 15px;
  padding-bottom: 5px;
}

.filtertitle a{
  color: #333333;
  text-decoration:none;
  font-size: 14px;
  font-weight: 400;
}

.option-heading{
  display:block;
  padding-top: 7px;
  padding-bottom: 7px;
}

.option-heading a{
  color: #333333;
  text-decoration:none;
  font-size: 14px;
  font-weight: 400;
}

.option-body{
  padding-left:15px;
  border-top: 1px solid #aeaeae;
  border-bottom: 1px solid #aeaeae;
}

.query-heading{
  display:block;
  padding-top: 7px;
  padding-bottom: 7px;
}

.query-heading a{
  color: #333333;
  text-decoration:none;
  font-size: 15px;
}

.query-body{
  padding-left:15px;
}

.detail-container{
  padding-left: 30px;
  padding-right: 30px;
}

.topborder{
  background: #ececec;
    overflow: hidden;
    height: 100vh;
    position: relative;
    backface-visibility: hidden;
    will-change: overflow;
    clear: both;
}

.endless{
      height: 100%;
}

.tip{
  font-size: 11px !important;
  margin: 0;
}
/* ... */

